--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -16,14 +16,14 @@
     <link rel="icon" type="image/png" sizes="32x32" href={% static "deps/favicon/favicon-32x32.png" %}>
     <link rel="icon" type="image/png" sizes="16x16" href={% static "deps/favicon/favicon-16x16.png" %}>
     <link rel="manifest" href={% static "deps/favicon/site.webmanifest" %}>
-    <title>WordCards</title>
+    <title>{{ title }}</title>
 </head>
 
 <body>
     <header>
         <nav class="navbar navbar-expand-lg bg-dark" data-bs-theme="dark">
             <div class="container">
-                <a class="navbar-brand" href={% url 'index' %}>WordCards</a>
+                <a class="navbar-brand" href={% url 'main:index' %}>WordCards</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -38,7 +38,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link  text-white" href="users/login.html">Практика</a>
+                            <a class="nav-link  text-white" href={% url 'catalog:index' %}>Практика</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link  text-white" href="users/login.html">Профіль</a>
