--- a/simulator/templates/simulator/catalog.html
+++ b/simulator/templates/simulator/catalog.html
@@ -1,9 +1,9 @@
-{% extends "main/base.html" %}
+{% extends "base.html" %}
 {% load static %}
 
 {% block content %}
     <div class="row">
-        <!-- Форма фильтров -->
+        <!-- Форма фільтрів -->
         <div class="dropdown mb-2">
             <button class="btn btn-secondary dropdown-toggle btn-dark" type="button" data-bs-toggle="dropdown"
                 aria-expanded="false">
@@ -93,29 +93,26 @@
             <h1 class="mb-4 fw-bold text-center">
                 Теми для вивчення
             </h1>
-            <!-- Описание -->
+            <!-- Опис -->
             <p class="lead text-center mb-5">
                 Оберіть тему для навчання. Ви можете почати нову тему, продовжити роботу над помилками
                 або повторити вже пройдену тему.
             </p>
-            <!-- СПИСОК ТЕМ СПИСОК ТЕМ СПИСОК ТЕМ СПИСОК ТЕМ СПИСОК ТЕМ СПИСОК ТЕМ СПИСОК ТЕМ -->
-            
+            <!-- Самі теми по порядку -->
+
             {% for topic in topics %}
             <div class="list-group">
-                <!-- Одна тема с прогрессом 100 -->
-
-                {% comment %} {% if topic.progress|add:0 == 100 %} {% endcomment %}
-
+                <!-- Одна тема -->
                 <div class="list-group-item mb-3 shadow-sm rounded">
                     <div class="row align-items-center">
-
-                        <!-- Название темы -->
+                        <!-- Назва темы -->
                         <div class="col-md-4">
                             <h5 class="mb-1 fw-bold">{{ topic.name }}</h5>
                             <small class="text-muted">Кількість слів: {{ topic.words_count }}</small>
                         </div>
 
-                        <!-- Прогресс -->
+                        {% comment %} {% if topic.progress|add:0 == 100 %} {% endcomment %}
+                        <!-- Прогрес -->
                         <div class="col-md-4">
                             <div class="progress" style="height: 20px;">
                                 <div class="progress-bar bg-success"
@@ -125,9 +122,7 @@
                                 </div>
                             </div>                        
                         </div>
-
-
-                        <!-- Кнопки действия -->                          
+                        <!-- Кнопка гри -->                          
                         <div class="col-md-4 text-md-end mt-3 mt-md-0">
                         
                             <div class="d-flex justify-content-end align-items-center gap-2">
@@ -136,29 +131,9 @@
                                     display: flex; justify-content: center; align-items: center;">
                                     Повторити тему
                                 </a>
-                                <a href={% url 'catalog:topic' topic.slug %} class="btn btn-outline-secondary" 
-                                    style="width: 180px; height: 60px; 
-                                    display: flex; justify-content: center; align-items: center;">
-                                    Продивитись список слів
-                                </a>
-                            </div>
 
-                        </div>
-                    </div>
-                </div>    
-
-                <!-- Тема с прогрессом 0 -->
-                {% comment %} {% elif topic.progress == 0 %}
-                <div class="list-group-item mb-3 shadow-sm rounded">
-                    <div class="row align-items-center">
-
-                        <!-- Название темы -->
-                        <div class="col-md-4">
-                            <h5 class="mb-1 fw-bold">{{ topic.name }}</h5>
-                            <small class="text-muted">Кількість слів: {{ topic.words_count }}</small>
-                        </div>
-
-                        <!-- Прогресс -->
+                        {% comment %} {% elif topic.progress == 0 %}
+                        <!-- Прогрес -->
                         <div class="col-md-4">
                             <div class="progress" style="height: 20px;">
                                 <div class="progress-bar bg-secondary"
@@ -168,39 +143,18 @@
                                 </div>
                             </div>
                         </div>
-
-                        <!-- Кнопки действия --> 
+                        <!-- Кнопка гри --> 
                         <div class="col-md-4 text-md-end mt-3 mt-md-0">
                             <div class="d-flex justify-content-end align-items-center gap-2">
-
                                 <a href="#" class="btn btn-outline-primary" 
                                     style="width: 180px; height: 60px; 
                                     display: flex; justify-content: center; align-items: center;">
                                     Почати тему
                                 </a>
-                                <a href={% url 'catalog:topic' %} class="btn btn-outline-secondary" 
-                                    style="width: 180px; height: 60px; 
-                                    display: flex; justify-content: center; align-items: center;">
-                                    Продивитись список слів
-                                </a>
-                            </div>
-                        </div>
-
-                    </div>
-                </div>  
-
-                <!-- Тема с прогрессом 1–99 -->
-                {% else %}
-                <div class="list-group-item mb-3 shadow-sm rounded">
-                    <div class="row align-items-center">
-
-                        <!-- Название темы -->
-                        <div class="col-md-4">
-                            <h5 class="mb-1 fw-bold">{{ topic.name }}</h5>
-                            <small class="text-muted">Кількість слів: {{ topic.words_count }}</small>
-                        </div>
-
-                        <!-- Прогресс -->
+                        
+                        
+                        {% else %}
+                        <!-- Прогрес -->
                         <div class="col-md-4">
                             <div class="progress" style="height: 20px;">
                                 <div class="progress-bar bg-warning"
@@ -210,8 +164,7 @@
                                 </div>
                             </div>
                         </div>
-
-                        <!-- Кнопки действия -->
+                        <!-- Кнопка гри -->
                         <div class="col-md-4 text-md-end mt-3 mt-md-0">
                             <div class="d-flex justify-content-end align-items-center gap-2">
                                 <a href="#" class="btn btn-outline-warning" 
@@ -219,7 +172,9 @@
                                     display: flex; justify-content: center; align-items: center;">
                                     Працювати над помилками
                                 </a>
-                                <a href={% url 'catalog:topic' %} class="btn btn-outline-secondary" 
+                                                                      
+                        {% endif %}       {% endcomment %}
+                                <a href={% url 'catalog:topic' topic.slug %} class="btn btn-outline-secondary" 
                                     style="width: 180px; height: 60px; 
                                     display: flex; justify-content: center; align-items: center;">
                                     Продивитись список слів
@@ -227,11 +182,10 @@
                             </div>
                         </div>
                     </div>
-                
-                </div>
-                {% endif %} {% endcomment %}
+                </div>    
             </div>
-            {% endfor %} 
+            {% endfor %}
+
         </div>
     </div>
 {% endblock %}
