--- a/templates/base.html
+++ b/templates/base.html
@@ -37,18 +37,22 @@
                                 
                             </a>
                         </li>
+                        {% if user.is_authenticated %}
                         <li class="nav-item">
                             <a class="nav-link  text-white" href={% url 'catalog:index' %}>Практика</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link  text-white" href={% url 'user:profile' %}>Профіль</a>
+                            <a class="nav-link  text-white" href={% url 'users:profile' %}>Профіль</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link  text-white" href={% url 'user:login' %}>Увійти</a>
+                            <a class="nav-link  text-white" href={% url 'users:logout' %}>Вийти</a>
                         </li>
+                        {% endif %}
+                        {% if not user.is_authenticated %}
                         <li class="nav-item">
-                            <a class="nav-link  text-white" href={% url 'user:logout' %}>Вийти</a>
+                            <a class="nav-link  text-white" href={% url 'users:login' %}>Увійти</a>
                         </li>
+                        {% endif %}
                     </ul>
                 </div>
             </div>
