--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -7,19 +7,20 @@
             <div class="row justify-content-center">
                 <div class="col-md-6 bg-white p-4 mb-4 mx-3 rounded custom-shadow">
                     <h2 class="text-center mb-4">Авторизація</h2>
-                    <form>
+                    <form method='post' action='{% url "users:login" %}'>
+                        {% csrf_token %}
                         <div class="mb-3">
                             <label for="username" class="form-label">Ім'я користувача</label>
-                            <input type="text" class="form-control" id="username" placeholder="Введите ваше имя пользователя" required>
+                            <input name="username" type="text" class="form-control" id="username" placeholder="Введите ваше имя пользователя" required>
                         </div>
                         <div class="mb-3">
                             <label for="password" class="form-label">Пароль</label>
-                            <input type="password" class="form-control" id="password" placeholder="Введите ваш пароль" required>
+                            <input name="password" type="password" class="form-control" id="password" placeholder="Введите ваш пароль" required>
                         </div>
                         <button type="submit" class="btn btn-dark btn-block">Увійти</button>
                     </form>
                     <div class="mt-3">
-                        <a href="#">Забули пароль?</a> | <a href={% url 'user:registration' %}>Створити акаунт</a>
+                        <a href="#">Забули пароль?</a> | <a href={% url 'users:registration' %}>Створити акаунт</a>
                     </div>
                     <hr>
                     <div class="text-center">
