--- a/simulator/templates/simulator/catalog.html
+++ b/simulator/templates/simulator/catalog.html
@@ -153,7 +153,7 @@
                                 <a href={% url 'catalog:topic' topic.slug %} class="btn btn-outline-secondary" 
                                     style="width: 180px; height: 60px; 
                                     display: flex; justify-content: center; align-items: center;">
-                                    Продивитись список слів
+                                    Переглянути тему
                                 </a>
                             </div>
                         </div>
