--- a/game/templates/game/result.html
+++ b/game/templates/game/result.html
@@ -19,7 +19,7 @@
 
     <!-- Процент правильних відповідей -->
     <p class="text-center text-muted mb-4">
-        Ви відповіли правильно на <strong>{{correct_user_anwers}} / {{user_anwers}}</strong> питань
+        Ви відповіли правильно на <strong>{{correct_user_answers}} / {{user_answers}}</strong> питань
         ({{user_result}} %)
     </p>
 
