--- a/game/templates/game/play.html
+++ b/game/templates/game/play.html
@@ -31,7 +31,7 @@
             <form method="post" action="{% url "game:play" session.id%}">
                 {% csrf_token %}
                 <div class="mb-3">
-                    <input type="text" name="user_answer" class="form-control text-center" placeholder="Введіть переклад" required>
+                    <input type="text" name="user_answer" class="form-control text-center" placeholder="Введіть переклад">
                 </div>
 
                 <div class="d-flex justify-content-center gap-3">
