--- a/simulator/templates/simulator/catalog.html
+++ b/simulator/templates/simulator/catalog.html
@@ -25,7 +25,7 @@
                 </div>
                 {% endfor %}
 
-                <p class="text-white mx-3 mt-3">Прогрес навання:</p>
+                <p class="text-white mx-3 mt-3">Прогрес навчання:</p>
                 <div class="form-check text-white mx-3">
                     <input class="form-check-input" type="checkbox" name="progress" id="progress-new" value="new"
                     {% if 'new' in progress_filters %}checked{% endif %}>
