--- a/simulator/templates/simulator/topic.html
+++ b/simulator/templates/simulator/topic.html
@@ -44,12 +44,22 @@
 
         <!-- Кнопка почати -->
     <div class="d-flex justify-content-center mb-5">
-        <a href="{% url 'game:direction' topic.slug %}"
-            class="btn btn-outline-warning"
+        <a href="{% url 'game:prepare' topic.slug %}?mode=full"
+            class="btn btn-outline-success"
             style="width: 200px; height: 60px; display: flex; justify-content: center; align-items: center;">
-            Почати
+            Почати тему
         </a>
     </div>
+    {% if 100 > percent > 0 %}
+    <!-- Кнопка працювати над помилками -->
+    <div class="d-flex justify-content-center mb-5">
+        <a href="{% url 'game:prepare' topic.slug %}?mode=mistakes"
+            class="btn btn-outline-warning"
+            style="width: 200px; height: 60px; display: flex; justify-content: center; align-items: center;">
+            Працювати над помилками
+        </a>
+    </div>
+    {% endif %}
 
 
     {% comment %} <!-- Кнопка почати -->
