--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -9,7 +9,7 @@
                 <div class="col-md-5">
                     <div class=" bg-white p-4 mb-4 mx-2 rounded custom-shadow">
                         <h3 class="text-center mb-4">Акаунт користувача</h3>
-                        <form method="post" action='{% url "users:profile" %}' enctype="multipart/form-data">
+                        <form method="post" action="{% url "users:profile" %}" enctype="multipart/form-data">
                             {% csrf_token %}
                             <div class="row">
                                 <div class="col-md-12 mb-3 text-center">
@@ -19,9 +19,11 @@
                                             style="max-width: 150px;">
                                     {% else %}
                                         <img src="{% static "deps/images/baseavatar.jpg" %}"
-                                            alt="Аватар пользователя" class="img-fluid rounded-circle"
+                                            alt="Аватар користувача" class="img-fluid rounded-circle"
                                             style="max-width: 150px;">
                                     {% endif %}
+                                    <input type="file" class="form-control mt-3" id="image" 
+                                        name="image" accept="image/*">
                                 </div>
                                 <div class="col-md-12 mb-3">
                                     <label for="firstName" class="form-label">Ім'я*</label>
@@ -103,18 +105,21 @@
                             Оформить заказ
                         </a>
                     </div>
-                </div>
+                </div> {% endcomment %}
                 <!-- ПРОЙДЕНІ ТЕМИ? -->
                 <div class="col-md-12">
                     <div class=" bg-white p-4 mb-4 mx-2 rounded custom-shadow">
-                        <h3 class="text-center mb-4">Мои заказы</h3>
-                        <!-- Разметка заказов -->
+                        <h3 class="text-center mb-4">{% if topics %}Обрані теми 
+                            {% else %}Тут будть ваші пройдені або розпочаті теми
+                            {% endif %}</h3>
+                        <!-- Размітка пройдених тем -->
                         <div class="container">
                             <div class="accordion" id="accordionExample">
+                                {% for topic in topics %}
                                 <div class="accordion-item">
                                     <h2 class="accordion-header" id="heading1">
                                         <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse1" aria-expanded="false" aria-controls="collapse1">
-                                            Заказ № 256 - 09 сентября 2023 9:04 | Статус:<strong class="mx-2"> В обработке</strong>
+                                           Тема: {{topic.name}} | Результат:<strong class="mx-2"> {{topic.progress}} %</strong>
                                         </button>
                                     </h2>
                                     <div id="collapse1" class="accordion-collapse collapse show" aria-labelledby="heading1" data-bs-parent="#accordionExample">
@@ -122,53 +127,16 @@
                                             <table class="table table-dark table-hover">
                                                 <thead>
                                                     <tr>
-                                                        <th>Товар</th>
-                                                        <th>Количество</th>
-                                                        <th>Цена</th>
-                                                        <th>Общая стоимость</th>
+                                                        <th>Тема</th>
+                                                        <th>Кількість слів у темі</th>
+                                                        <th>Мій результат</th>
                                                     </tr>
                                                 </thead>
                                                 <tbody>
                                                     <tr>
-                                                        <td><a class="text-white" href="#">Комплект стол и три стула</a></td>
-                                                        <td>1</td>
-                                                        <td>255.00 $</td>
-                                                        <td>255.00 $</td>
-                                                        
-                                                    </tr>
-                                                </tbody>
-                                            </table>
-                                            <div class="d-flex justify-content-between">
-                                                <p><strong>Итого:</strong></p>
-                                                <p><strong>255.00 $</strong></p>
-
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="accordion-item">
-                                    <h2 class="accordion-header" id="heading2">
-                                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse2" aria-expanded="false" aria-controls="collapse2">
-                                            Заказ № 248 - 01 августа 2023 11:28 | Статус: <strong>Получен</strong>
-                                        </button>
-                                    </h2>
-                                    <div id="collapse2" class="accordion-collapse collapse" aria-labelledby="heading2" data-bs-parent="#accordionExample">
-                                        <div class="accordion-body">
-                                            <table class="table table-dark table-hover">
-                                                <thead>
-                                                    <tr>
-                                                        <th>Товар</th>
-                                                        <th>Количество</th>
-                                                        <th>Цена</th>
-                                                        <th>Общая стоимость</th>
-                                                    </tr>
-                                                </thead>
-                                                <tbody>
-                                                    <tr>
-                                                        <td><a class="text-white" href="#">Стул офисный</a></td>
-                                                        <td>2</td>
-                                                        <td>30.00 $</td>
-                                                        <td>60.00 $</td>
+                                                        <td><a class="text-white" href="{% url "catalog:topic" topic.slug %}">{{topic.name}}</a></td>
+                                                        <td>{{topic.words_count}}</td>
+                                                        <td>{{topic.progress}} %</td>
                                                         
                                                     </tr>
                                                 </tbody>
@@ -176,11 +144,12 @@
                                         </div>
                                     </div>
                                 </div>
+                                {% endfor %}
                             </div>
                         </div>
-                        <!-- Закончилась разметка заказов -->
+                        <!-- Закінчилась розмітка пройдених тем -->
                     </div>
-                </div> {% endcomment %}
+                </div>
 
             </div>
         </div>
