--- a/game/templates/game/result.html
+++ b/game/templates/game/result.html
@@ -3,7 +3,6 @@
 
 {% block content %}
 <div class="container mt-5 pt-4">
-
     <!-- Кнопка назад -->
     <div class="d-flex justify-content-start mb-5">
         <a href="{% url 'catalog:index' %}" class="btn btn-outline-secondary" 
@@ -11,37 +10,31 @@
             Повернутись до вибору теми
         </a>
     </div>
-
     <!-- Заголовок результату -->
     <h1 class="mb-3 fw-bold text-center">
         Результат практики по темі "{{ topic.name }}"
     </h1>
-
     <!-- Процент правильних відповідей -->
     <p class="text-center text-muted mb-4">
         Ви відповіли правильно на <strong>{{correct_user_answers}} / {{user_answers}}</strong> питань
         ({{user_result}} %)
     </p>
-
     <!-- Блок дії -->
     <div class="d-flex flex-column align-items-center gap-3">
-        <a href="#" class="btn btn-outline-success" 
+        <a href="{% url 'game:prepare' topic.slug %}?mode=full" class="btn btn-outline-success" 
            style="width: 200px; height: 60px; display: flex; justify-content: center; align-items: center;">
             Почати ще раз
         </a>
-
-        {% comment %} {% if wrong_words %} {% endcomment %}
-        <a href="#" class="btn btn-outline-warning" 
+        {% if wrong_words %}
+        <a href="{% url 'game:prepare' topic.slug %}?mode=mistakes" class="btn btn-outline-warning" 
            style="width: 200px; height: 60px; display: flex; justify-content: center; align-items: center;">
             Робота над помилками
         </a>
-        {% comment %} {% endif %} {% endcomment %}
-
+        {% endif %}
         <a href="{% url 'catalog:index' %}" class="btn btn-outline-secondary" 
            style="width: 200px; height: 60px; display: flex; justify-content: center; align-items: center;">
             Повернутись до каталогу тем
         </a>
     </div>
-
 </div>
 {% endblock %}
