--- a/templates/base.html
+++ b/templates/base.html
@@ -9,8 +9,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href={% static "deps/css/bootstrap/bootstrap.min.css" %}>
     <link rel="stylesheet" href={% static "deps/css/my_css.css" %}>
-    <!-- Стиль footer-a для главной страницы -->
-    {% block css %}{% endblock  %}
     <!-- Favicons for different platforms -->
     <link rel="apple-touch-icon" sizes="180x180" href={% static "deps/favicon/apple-touch-icon.png" %}>
     <link rel="icon" type="image/png" sizes="32x32" href={% static "deps/favicon/favicon-32x32.png" %}>
@@ -62,11 +60,8 @@
         <!-- Контент -->
         <div class="container">
             <div class="row mt-1">
-                <div class="col-lg-2">
-                    <!-- Пустой блок на Ваше усмотрение -->
-                </div>
                 <div class="col-lg-10">
-                    <!-- Контент на странице -->
+                    <!-- Контент на стрінці -->
                     {% block content %}{% endblock %}
 
                 </div>
