--- a/templates/base.html
+++ b/templates/base.html
@@ -10,10 +10,7 @@
     <link rel="stylesheet" href={% static "deps/css/bootstrap/bootstrap.min.css" %}>
     <link rel="stylesheet" href={% static "deps/css/my_css.css" %}>
     <!-- Favicons for different platforms -->
-    <link rel="apple-touch-icon" sizes="180x180" href={% static "deps/favicon/apple-touch-icon.png" %}>
-    <link rel="icon" type="image/png" sizes="32x32" href={% static "deps/favicon/favicon-32x32.png" %}>
-    <link rel="icon" type="image/png" sizes="16x16" href={% static "deps/favicon/favicon-16x16.png" %}>
-    <link rel="manifest" href={% static "deps/favicon/site.webmanifest" %}>
+    <link rel="icon" type="image/png" href="{% static 'deps/favicon/favicon-16x16.png' %}">
     <title>{{ title }}</title>
 </head>
 
